--- a/projects/lib-json/Cargo.toml
+++ b/projects/lib-json/Cargo.toml
@@ -15,6 +15,7 @@ exclude = ["package.json", "tests/**"]
 crate-type = ["cdylib"]
 
 [dependencies]
+json5 = "0.4.1"
 wit-bindgen = "0.22.0"
 
 [dev-dependencies]
